<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.LoginActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/maven_pro_regular"
        android:maxLines="1"
        android:text="@string/kerma_shop_admin"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30dp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linear_layout_user_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/login_phone_number_input"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_field_height"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="@dimen/input_field_margin"
            android:layout_marginRight="10dp"
            android:background="@drawable/rounded_corners_edittext_dark"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="5dp"
            android:gravity="start|center_vertical"
            android:hint="@string/user_email"
            android:inputType="textEmailAddress"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textAlignment="viewStart"
            android:textColor="@color/textColorSecondary"
            android:textColorHint="@color/textColorPrimaryDark" />

        <EditText
            android:id="@+id/login_user_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_field_height"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="@dimen/input_field_margin"
            android:layout_marginRight="10dp"
            android:background="@drawable/rounded_corners_edittext_dark"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="5dp"
            android:gravity="start|center_vertical"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textAlignment="viewStart"
            android:textColor="@color/textColorSecondary"
            android:textColorHint="@color/textColorPrimaryDark" />

        <LinearLayout
            android:id="@+id/linear_layout_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <com.rey.material.widget.CheckBox
                android:id="@+id/rememberMeChk"
                style="@style/Material.Drawable.CheckBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="Se souvenir de moi?"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:textStyle="bold"
                app:cbd_strokeColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/forgetPasswordLink"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="Mot de passe oublié?"
                android:textAlignment="textEnd"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />

        </LinearLayout>

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_button"
            android:text="Se connecter"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>


</RelativeLayout>