<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.obiangetfils.kermashopadmin.controller.AddNewProductActivity">

    <include
        android:id="@+id/include_1"
        layout="@layout/toolbar_layout" />

    <LinearLayout
        android:id="@+id/main_checkout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/include_1"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_container"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:background="@drawable/spinner_background">

                    <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                        android:id="@+id/SearchableSpinnerCategory"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        app:backgroundTint="@color/black"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/productName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/toolbarForSeller"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="6"
                        android:background="@drawable/rounded_corners_edittext_dark"
                        android:hint="Saisir le nom du produit"
                        android:inputType="text"
                        android:padding="14dp"
                        android:textAlignment="center" />

                </LinearLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/grey_500"
                    android:text="Prix du produit"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="5">

                    <EditText
                        android:id="@+id/productNewPrice"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="2dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="2"
                        android:background="@drawable/rounded_corners_edittext_dark"
                        android:hint="@string/new_price"
                        android:inputType="number"
                        android:padding="14dp"
                        android:textAlignment="center" />

                    <EditText
                        android:id="@+id/productOldPrice"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="2dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="2"
                        android:background="@drawable/rounded_corners_edittext_dark"
                        android:hint="@string/old_price"
                        android:inputType="number"
                        android:padding="14dp"
                        android:textAlignment="center" />

                    <EditText
                        android:id="@+id/productQuantity"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_corners_edittext_dark"
                        android:hint="Qté"
                        android:inputType="number"
                        android:padding="14dp"
                        android:textAlignment="center" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/grey_500"
                    android:text="Etiquette du produit"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/newness"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:layout_weight="1"
                            android:text="Nouveauté" />

                        <CheckBox
                            android:id="@+id/sale"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:layout_weight="1"
                            android:text="Vente" />

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@color/grey_500"
                    android:text="Description du produit"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/productDescriptionEdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_corners_edittext_dark"
                    android:hint="@string/description"
                    android:inputType="textMultiLine"
                    android:padding="14dp"
                    android:textAlignment="center" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewAddNewProduct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/noImageLoaded"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_no_image_yet" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@color/grey_500"
                    android:text="Notre politique générale de vente*"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/cgu_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/cgu" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@color/grey_500"
                    android:text="Besoin d'aide, merci de nous contacter sur: "
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal"
                    android:weightSum="4">

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="0dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/whatsappId"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:src="@drawable/whatsapp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:background="#0B641D"
                                android:text="WhatsApp"
                                android:textAlignment="center"
                                android:textColor="@android:color/white"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>


                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="0dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/icFacebook"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:src="@drawable/ic_facebook" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:background="@color/colorPrimary"
                                android:text="Facebook"
                                android:textAlignment="center"
                                android:textColor="@android:color/white"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>


                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="0dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/icGmail"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:src="@drawable/ic_gmail" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:background="#C31519"
                                android:text="Gmail"
                                android:textAlignment="center"
                                android:textColor="@android:color/white"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="0dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/icPhone"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:src="@drawable/ic_phone_call" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:background="#CCBA0F"
                                android:text="Téléphone"
                                android:textAlignment="center"
                                android:textColor="@android:color/white"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/save_image"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:background="@drawable/default_background"
                android:maxLines="2"
                android:text="@string/addToBdd"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <Button
                android:id="@+id/select_image"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:background="@color/colorAccentGrey"
                android:maxLines="2"
                android:text="@string/selectImage"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:indeterminateDrawable="@drawable/progress_bar"
        android:visibility="gone" />

</RelativeLayout>